[gd_scene load_steps=25 format=3 uid="uid://wrjyucyn5loi"]

[ext_resource type="Texture2D" uid="uid://bs7ncwo0tesgn" path="res://images/Random Images/Title Screen Background.jpg" id="1_vyanw"]
[ext_resource type="Texture2D" uid="uid://dtgjm8fdc3hw1" path="res://Spinner/file (1).png" id="2_xa07e"]
[ext_resource type="Script" path="res://SpongeBobWheel.gd" id="3_2fk7n"]
[ext_resource type="FontFile" uid="uid://bjwi76q461gp1" path="res://Spinner/Luckiest_Guy/LuckiestGuy-Regular.ttf" id="4_jukdm"]
[ext_resource type="AudioStream" uid="uid://dh03fu6t4qfpn" path="res://sound/sfx/wheelclick.mp3" id="5_kab14"]
[ext_resource type="AudioStream" uid="uid://c0jg8gt3fbxrk" path="res://sound/sfx/button-pressed-38129.mp3" id="6_pid34"]
[ext_resource type="AudioStream" uid="uid://bd6w4h6n03xqn" path="res://sound/sfx/success-1-6297.mp3" id="7_ofbpn"]
[ext_resource type="Script" path="res://header.gd" id="8_61oc1"]
[ext_resource type="Texture2D" uid="uid://b1t22wss47k05" path="res://images/Random Images/Gry.png" id="9_ktn2m"]
[ext_resource type="Texture2D" uid="uid://dj0o117gge446" path="res://images/Icons/SpongeBobIconNew.png" id="11_vvdxv"]
[ext_resource type="PackedScene" uid="uid://bxi308ewdck46" path="res://Sprite_Scenes/evil_spongebob.tscn" id="16_w6dbj"]
[ext_resource type="PackedScene" uid="uid://b5pv4yghigs7f" path="res://Sprite_Scenes/evil_squidward.tscn" id="17_bbmmu"]
[ext_resource type="PackedScene" uid="uid://ba3u3kc6ib30w" path="res://Sprite_Scenes/handsome_squidward.tscn" id="18_h4l5i"]
[ext_resource type="PackedScene" uid="uid://cgfratmql68ij" path="res://Sprite_Scenes/mr_krabs.tscn" id="19_sdy80"]
[ext_resource type="AudioStream" uid="uid://df2spsufrahfq" path="res://sound/music/shake sum.mp3" id="20_ggcyi"]
[ext_resource type="PackedScene" uid="uid://c1x006jrlasdx" path="res://Sprite_Scenes/patrick_star.tscn" id="20_w7jmn"]
[ext_resource type="PackedScene" uid="uid://cnt7onhuh850f" path="res://Sprite_Scenes/plankton.tscn" id="21_66121"]
[ext_resource type="PackedScene" uid="uid://vnjuu4nt4ref" path="res://Sprite_Scenes/sandy_cheeks.tscn" id="22_7cl21"]
[ext_resource type="Script" path="res://SpongebobScore.gd" id="22_bk042"]
[ext_resource type="Script" path="res://arrow.gd" id="23_67sm5"]
[ext_resource type="PackedScene" uid="uid://bmj4clsmxaeqs" path="res://Sprite_Scenes/Squidward.tscn" id="23_rrarv"]
[ext_resource type="PackedScene" uid="uid://dcgdpbk7x4tja" path="res://Sprite_Scenes/spongebob.tscn" id="24_3b2jy"]
[ext_resource type="Texture2D" uid="uid://cj0afi3db0g22" path="res://Spinner/ar.png" id="24_b2ysc"]
[ext_resource type="Script" path="res://backb.gd" id="25_cxhqm"]

[node name="Wheel" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(540, 960)
scale = Vector2(1.75041, 5.33333)
texture = ExtResource("1_vyanw")
metadata/_edit_lock_ = true

[node name="Wheel (Fortnight ver_)" type="Sprite2D" parent="."]
position = Vector2(523, 907)
scale = Vector2(2.55129, 2.48666)
texture = ExtResource("2_xa07e")
script = ExtResource("3_2fk7n")

[node name="Common" type="Label" parent="Wheel (Fortnight ver_)"]
offset_left = -172.854
offset_top = -22.118
offset_right = -12.8537
offset_bottom = 16.882
theme_override_fonts/font = ExtResource("4_jukdm")
theme_override_font_sizes/font_size = 38
text = "Common"
metadata/_edit_use_anchors_ = true

[node name="Uncommon" type="Label" parent="Wheel (Fortnight ver_)"]
offset_left = 28.221
offset_top = -5.22788
offset_right = 192.221
offset_bottom = 25.7721
rotation = 0.321085
theme_override_fonts/font = ExtResource("4_jukdm")
theme_override_font_sizes/font_size = 29
text = "Uncommon"
metadata/_edit_use_anchors_ = true

[node name="Rare" type="Label" parent="Wheel (Fortnight ver_)"]
offset_left = 56.0
offset_top = -58.0
offset_right = 167.0
offset_bottom = -11.0
rotation = -0.701724
theme_override_fonts/font = ExtResource("4_jukdm")
theme_override_font_sizes/font_size = 43
text = "Rare"
metadata/_edit_use_anchors_ = true

[node name="Epic" type="Label" parent="Wheel (Fortnight ver_)"]
offset_left = 41.1556
offset_top = -113.807
offset_right = 105.156
offset_bottom = -78.8073
rotation = -1.08817
theme_override_fonts/font = ExtResource("4_jukdm")
theme_override_font_sizes/font_size = 32
text = "Epic"
metadata/_edit_use_anchors_ = true

[node name="Mythical" type="Label" parent="Wheel (Fortnight ver_)"]
offset_left = 19.5979
offset_top = -113.807
offset_right = 91.5979
offset_bottom = -90.8069
rotation = -1.39657
theme_override_fonts/font = ExtResource("4_jukdm")
text = "Mythical"
metadata/_edit_use_anchors_ = true

[node name="Legendary" type="Label" parent="Wheel (Fortnight ver_)"]
offset_left = 1.95979
offset_top = -106.569
offset_right = 86.9598
offset_bottom = -83.5688
rotation = -1.55918
theme_override_fonts/font = ExtResource("4_jukdm")
text = "Legendary"
metadata/_edit_use_anchors_ = true

[node name="Rare_Body" type="Area2D" parent="Wheel (Fortnight ver_)"]
position = Vector2(-209.698, -327.749)
scale = Vector2(0.391959, 0.402146)
metadata/_edit_lock_ = true

[node name="Rare_Collision_Shape" type="CollisionPolygon2D" parent="Wheel (Fortnight ver_)/Rare_Body"]
polygon = PackedVector2Array(826, 424, 862, 452, 916, 506, 926, 517, 962, 567, 1006, 666, 536, 814)

[node name="Legendary_Body" type="Area2D" parent="Wheel (Fortnight ver_)"]
position = Vector2(-209.698, -327.749)
scale = Vector2(0.391959, 0.402146)
metadata/_edit_lock_ = true

[node name="Legendary_Collision_Shape2" type="CollisionPolygon2D" parent="Wheel (Fortnight ver_)/Legendary_Body"]
polygon = PackedVector2Array(534, 331, 536, 802, 598, 336)

[node name="Mythical_Body" type="Area2D" parent="Wheel (Fortnight ver_)"]
position = Vector2(-209.698, -327.749)
scale = Vector2(0.391959, 0.402146)
metadata/_edit_lock_ = true

[node name="Mythical_Collision_Shape2" type="CollisionPolygon2D" parent="Wheel (Fortnight ver_)/Mythical_Body"]
polygon = PackedVector2Array(598, 337, 632, 340, 662, 347, 688, 356, 537, 811)

[node name="Common_Body" type="Area2D" parent="Wheel (Fortnight ver_)"]
position = Vector2(-209.698, -327.749)
scale = Vector2(0.391959, 0.402146)
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Wheel (Fortnight ver_)/Common_Body"]
polygon = PackedVector2Array(534, 814, 827, 1208, 767, 1245, 713, 1269, 667, 1282, 591, 1298, 468, 1297, 375, 1275, 303, 1244, 240, 1207, 190, 1165, 136, 1106, 97.0003, 1045, 58.0004, 957, 37.0004, 846, 38.0004, 772, 53.0004, 689, 92.0003, 595, 122, 545, 166, 492, 229, 431, 312, 381, 407, 345, 515, 332, 532, 330)

[node name="Epic_Body" type="Area2D" parent="Wheel (Fortnight ver_)"]
position = Vector2(-209.698, -327.749)
scale = Vector2(0.391959, 0.402146)
metadata/_edit_lock_ = true

[node name="Epic_Collision_Shape" type="CollisionPolygon2D" parent="Wheel (Fortnight ver_)/Epic_Body"]
polygon = PackedVector2Array(688, 356, 725, 368, 765, 386, 802, 407, 826, 424, 536, 813)
metadata/_edit_lock_ = true

[node name="Uncommon_Body" type="Area2D" parent="Wheel (Fortnight ver_)"]
position = Vector2(-209.698, -327.749)
scale = Vector2(0.391959, 0.402146)
metadata/_edit_lock_ = true

[node name="Uncommon_Collision_Shape2" type="CollisionPolygon2D" parent="Wheel (Fortnight ver_)/Uncommon_Body"]
polygon = PackedVector2Array(535, 813, 826, 1205, 900.999, 1143, 967.999, 1059, 1007, 978, 1031, 878, 1033, 795, 1017, 697, 1006, 666)

[node name="Click1" type="AudioStreamPlayer" parent="Wheel (Fortnight ver_)"]
stream = ExtResource("5_kab14")

[node name="Click2" type="AudioStreamPlayer" parent="Wheel (Fortnight ver_)"]
stream = ExtResource("5_kab14")

[node name="Click3" type="AudioStreamPlayer" parent="Wheel (Fortnight ver_)"]
stream = ExtResource("5_kab14")

[node name="Click4" type="AudioStreamPlayer" parent="Wheel (Fortnight ver_)"]
stream = ExtResource("5_kab14")

[node name="Click5" type="AudioStreamPlayer" parent="Wheel (Fortnight ver_)"]
stream = ExtResource("5_kab14")

[node name="Click6" type="AudioStreamPlayer" parent="Wheel (Fortnight ver_)"]
stream = ExtResource("5_kab14")

[node name="ButtonPressed" type="AudioStreamPlayer" parent="Wheel (Fortnight ver_)"]
stream = ExtResource("6_pid34")

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Wheel (Fortnight ver_)"]
stream = ExtResource("7_ofbpn")

[node name="Timer" type="Timer" parent="Wheel (Fortnight ver_)"]
wait_time = 0.001
one_shot = true

[node name="Button" type="Button" parent="."]
offset_left = 338.0
offset_top = 1460.0
offset_right = 725.0
offset_bottom = 1645.0
theme_override_fonts/font = ExtResource("4_jukdm")
theme_override_font_sizes/font_size = 150
text = "Spin"
metadata/_edit_use_anchors_ = true

[node name="Header" type="Label" parent="."]
visible = false
z_index = 5
offset_left = 5.0
offset_top = 493.0
offset_right = 1072.0
offset_bottom = 594.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_jukdm")
theme_override_font_sizes/font_size = 100
text = "You Got "
horizontal_alignment = 1
script = ExtResource("8_61oc1")

[node name="Sprite2D" type="Sprite2D" parent="Header"]
z_index = -1
position = Vector2(536, 39)
scale = Vector2(0.67625, 0.456667)
texture = ExtResource("9_ktn2m")

[node name="Footer" type="Label" parent="."]
visible = false
z_index = 5
offset_left = 3.0
offset_top = 1284.0
offset_right = 1070.0
offset_bottom = 1385.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_jukdm")
theme_override_font_sizes/font_size = 100
text = "30% spin rate!"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="Footer"]
z_index = -1
position = Vector2(538.5, 41.5)
scale = Vector2(0.674375, 0.416666)
texture = ExtResource("9_ktn2m")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_ggcyi")
volume_db = -10.0
autoplay = true

[node name="FortniteLogo" type="Sprite2D" parent="."]
position = Vector2(225, 147)
scale = Vector2(0.8, 0.878)
texture = ExtResource("11_vvdxv")
script = ExtResource("22_bk042")

[node name="FNScore" type="Label" parent="FortniteLogo"]
anchors_preset = -1
anchor_left = 0.000564398
anchor_top = 0.00134068
anchor_right = 0.000564469
anchor_bottom = 0.00134068
offset_left = 243.507
offset_top = -41.9462
offset_right = 1068.51
offset_bottom = 145.054
theme_override_fonts/font = ExtResource("4_jukdm")
theme_override_font_sizes/font_size = 100
text = "0"
metadata/_edit_use_anchors_ = true

[node name="Arrow" type="Area2D" parent="."]
position = Vector2(-10, 84)
script = ExtResource("23_67sm5")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Arrow"]
position = Vector2(530, 305)
rotation = -1.5708
scale = Vector2(0.197143, 0.131649)
build_mode = 1
polygon = PackedVector2Array(-365.217, -0.00195312, -289.13, 37.9783, 370.289, 364.606, 207.971, 0, 365.217, -364.606)
metadata/_edit_lock_ = true

[node name="Ar" type="Sprite2D" parent="Arrow"]
position = Vector2(530, 305)
rotation = -1.5708
scale = Vector2(0.197143, 0.131649)
texture = ExtResource("24_b2ysc")
metadata/_edit_lock_ = true

[node name="backb" type="Button" parent="."]
offset_left = 840.0
offset_top = 1827.0
offset_right = 1078.0
offset_bottom = 1923.0
theme_override_fonts/font = ExtResource("4_jukdm")
theme_override_font_sizes/font_size = 80
text = "BACK"
script = ExtResource("25_cxhqm")
metadata/_edit_use_anchors_ = true

[node name="buttonclick" type="AudioStreamPlayer" parent="backb"]
stream = ExtResource("6_pid34")

[node name="Evil_Spongebob" parent="." instance=ExtResource("16_w6dbj")]
visible = false
z_index = 1
position = Vector2(586, 952)
scale = Vector2(0.5, 0.5)

[node name="Evil_Squidward" parent="." instance=ExtResource("17_bbmmu")]
visible = false
z_index = 1
position = Vector2(550, 928)
scale = Vector2(0.37, 0.37)

[node name="Handsome_Squidward" parent="." instance=ExtResource("18_h4l5i")]
visible = false
z_index = 1
position = Vector2(540, 950)
scale = Vector2(2, 2)

[node name="Mr_Krabs" parent="." instance=ExtResource("19_sdy80")]
visible = false
z_index = 1
position = Vector2(540, 950)
scale = Vector2(2.8, 2.8)

[node name="Patrick_Star" parent="." instance=ExtResource("20_w7jmn")]
visible = false
z_index = 1
position = Vector2(540, 940)
scale = Vector2(0.8, 0.8)

[node name="Plankton" parent="." instance=ExtResource("21_66121")]
visible = false
z_index = 1
position = Vector2(552, 950)

[node name="Sandy_Cheeks" parent="." instance=ExtResource("22_7cl21")]
visible = false
z_index = 1
position = Vector2(484, 950)

[node name="Squidward" parent="." instance=ExtResource("23_rrarv")]
visible = false
z_index = 1
position = Vector2(550, 950)
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" parent="Squidward" index="0"]
position = Vector2(-19.9999, -14)
scale = Vector2(0.45625, 1.075)

[node name="Spongebob" parent="." instance=ExtResource("24_3b2jy")]
visible = false
z_index = 1
position = Vector2(540, 950)
scale = Vector2(0.8, 0.8)

[connection signal="child_entered_tree" from="Wheel (Fortnight ver_)/Uncommon" to="Wheel (Fortnight ver_)" method="_on_uncommon_child_entered_tree"]
[connection signal="area_entered" from="Wheel (Fortnight ver_)/Rare_Body" to="Wheel (Fortnight ver_)" method="_on_rare_body_area_entered"]
[connection signal="area_entered" from="Wheel (Fortnight ver_)/Legendary_Body" to="Wheel (Fortnight ver_)" method="_on_legendary_body_area_entered"]
[connection signal="area_entered" from="Wheel (Fortnight ver_)/Mythical_Body" to="Wheel (Fortnight ver_)" method="_on_mythical_body_area_entered"]
[connection signal="area_entered" from="Wheel (Fortnight ver_)/Common_Body" to="Wheel (Fortnight ver_)" method="_on_common_body_area_entered"]
[connection signal="area_entered" from="Wheel (Fortnight ver_)/Epic_Body" to="Wheel (Fortnight ver_)" method="_on_epic_body_area_entered"]
[connection signal="area_entered" from="Wheel (Fortnight ver_)/Uncommon_Body" to="Wheel (Fortnight ver_)" method="_on_uncommon_body_area_entered"]
[connection signal="timeout" from="Wheel (Fortnight ver_)/Timer" to="Wheel (Fortnight ver_)" method="_on_timer_timeout"]
[connection signal="pressed" from="Button" to="Wheel (Fortnight ver_)" method="_on_button_pressed"]
[connection signal="area_entered" from="Arrow" to="Wheel (Fortnight ver_)" method="_on_arrow_area_entered"]
[connection signal="body_entered" from="Arrow" to="Wheel (Fortnight ver_)" method="_on_arrow_body_entered"]
[connection signal="body_entered" from="Arrow" to="Arrow" method="_on_body_entered"]
[connection signal="button_down" from="backb" to="backb" method="_on_button_down"]
[connection signal="finished" from="backb/buttonclick" to="backb" method="_on_buttonclick_finished"]

[editable path="Evil_Spongebob"]
[editable path="Evil_Squidward"]
[editable path="Handsome_Squidward"]
[editable path="Mr_Krabs"]
[editable path="Patrick_Star"]
[editable path="Plankton"]
[editable path="Sandy_Cheeks"]
[editable path="Squidward"]
[editable path="Spongebob"]
